add salmon-text style!

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <script type="text/javascript" src="./js/scripts.js" defer></script>
     </head>
     <body>
-        <h1>JavaScript-in-Class (Again!)</h1>
+        <h1 id="my-heading">JavaScript-in-Class (Again!)</h1>
     </body>
 </html>
