add hangman-game initial code

--- a/Day-6.html
+++ b/Day-6.html
@@ -12,6 +12,7 @@
 
         <!-- Scripts: -->
         <script type="text/javascript" src="./js/day-6.js" defer></script>
+        <script type="text/javascript" src="./js/hangman-game.js" defer></script>
     </head>
     <body>
         <h1 id="my-heading">JavaScript-in-Class (Day 6!)</h1>
